--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ html {
 body,html {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family:'Montserrat', sans-serif;
+
 }
 
 .keys {
